<resources>
    <string name="app_name">BaseMyviettel</string>
    <string name="second">giây</string>
    <string name="minutes">phút</string>
    <string name="hour">giờ</string>
    <string name="search_hint">Tìm kiếm</string>
    <string name="title_shopping_category_main_shop">Mua sắm</string>
    <string name="title_shopping_category_main_shop_2">Sách hay</string>
    <string name="title_shopping_category_main_shop_3">Bánh kẹo</string>
    <string name="title_shopping_category_main_shop_4">Sản phẩm bán chạy</string>
    <string name="title_shopping_category_main_shop_5">Mã giảm giá nổi bật</string>
    <string name="title_internet_main_shop">Internet - Truyền hình số</string>
    <string name="title_type_common">Kho sim số</string>
    <string name="title_sim_main_shop">Kho sim số</string>
    <string name="title_packdata_category_main_shop">Gói cước bán kèm số</string>
    <string name="title_suggest_main_shop">Hướng dẫn mua hàng</string>
    <string name="tat_ca">Tất cả</string>
    <string name="choose_install_place">Chọn khu vực lắp đặt</string>
    <string name="button_register_new_internet_television">Đăng ký mới dịch vụ Internet-Truyền hình số</string>
    <string name="button_register_more_used_internet_television">Đăng ký thêm dịch vụ Internet-Truyền hình số</string>
    <string name="label_tra_truoc">Trả trước</string>
    <string name="label_tra_sau">Trả sau</string>
    <string name="advanced_filter_">Tìm số</string>
    <string name="msg_network_not_available">Mất kết nối internet. Vui lòng kiểm tra lại wifi hoặc dữ liệu di động!</string>
    <string name="goi_cuoc">Gói cước bán kèm số</string>
    <string name="register_tv">Đăng ký</string>
    <string name="thue_bao_moi">Thuê bao mới</string>
    <string name="chon_so">Chọn số</string>
    <string name="chon_goi_cuoc">Chọn gói cước</string>
    <string name="nhap_thong_tin">Nhập thông tin</string>
    <string name="giao_hang">Giao hàng</string>
    <string name="thanh_toan">Thanh toán</string>
    <string name="pack_of_data_">Gói cước</string>
    <string name="benefit_package_">Dịch vụ GTGT</string>
    <string name="nap_tien">Nạp tiền</string>
    <string name="continue_register">Tiếp tục</string>
    <string name="info_customer_ntt">Thông tin khách hàng</string>
    <string name="sampling_ntt">Chọn mẫu</string>
    <string name="ntt_hint_province_city">Chọn Tỉnh/Thành Phố</string>
    <string name="ntt_hint_district">Chọn Quận/Huyện</string>
    <string name="ntt_hint_wards">Chọn Phường/Xã</string>
    <string name="paper_information">Thông tin giấy tờ</string>
    <string name="chi_tiet">Chi tiết</string>
    <string name="hoan_tat">Hoàn tất</string>
    <string name="hinh_thuc_tt">Hình thức thanh toán</string>
    <string name="customer_infor">Thông tin khách hàng</string>
    <string name="tt_info_delivery">Thông tin giao hàng</string>
    <string name="tt_info_order">Thông tin đơn hàng</string>
    <string name="tong_chi_phi">Tổng chi phí</string>
    <string name="dieu_khoan_mua_hang_3">Tôi đồng ý với các </string>
    <string name="dieu_khoan_mua_hang_4"><u>điều khoản mua hàng</u></string>
    <string name="dia_chi_nhan_sim">Địa chỉ nhận sim</string>
    <string name="thong_bao">Quý khách có thể đến bất kỳ cửa hàng nào của Viettel để thực hiện giao dịch hoặc đặt hẹn để không phải chờ đợi</string>
    <string name="search_shop">Tìm kiếm cửa hàng</string>
    <string name="khong_tim_thay_cua_hang">Không tìm thấy cửa hàng gần đây</string>
    <string name="message_district">Bạn phải chọn tỉnh/thành phố trước</string>
    <string name="tv_number_null">0(null)</string>
    <string name="info_sim_pre">Hòa mạng trả trước</string>
    <string name="info_sim_pos">Hòa mạng trả sau</string>
    <string name="price_default">0đ</string>
</resources>