<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/title_internet_main_shop"
        android:textColor="@color/color_44494D"
        android:textSize="@dimen/text_size_18sp"
        android:textStyle="bold"
        app:fontFamily="@font/pf_beausanspro_bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="13dp"
        android:background="@color/whiteSolid"
        android:clipChildren="false"
        android:clipToPadding="false">

        <ImageView
            android:id="@+id/iv_bg_dangkymoi_codinh"
            android:layout_width="@dimen/dimen_378dp"
            android:layout_height="@dimen/dimen_190dp"
            android:scaleType="fitXY"
            android:src="@drawable/bg_dangkymoi_codinh"
            />

        <TextView
            android:id="@+id/tv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_10dp"
            android:layout_marginTop="8dp"
            android:text="@string/choose_install_place"
            android:textColor="@color/color_44494D"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold"
            app:fontFamily="@font/sf_pro_text_bold" />

        <LinearLayout
            android:id="@+id/ll_register_new_bound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_label"
            android:layout_marginHorizontal="@dimen/dimen_13dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:orientation="horizontal"
            android:weightSum="343">

            <LinearLayout
                android:id="@+id/ll_register_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="194"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_register_new"
                    android:layout_width="@dimen/dimen_24dp"
                    android:layout_height="@dimen/dimen_24dp"
                    android:padding="3dp"
                    app:srcCompat="@drawable/ic_radio_button_default" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/dimen_5dp"
                    android:layout_marginLeft="@dimen/dimen_5dp"
                    android:fontFamily="@font/sf_uitext_regular"
                    android:text="@string/button_register_new_internet_television"
                    android:textColor="@color/blackSolid"
                    android:textSize="@dimen/text_size_14sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_register_more_bound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_register_new_bound"
            android:layout_marginHorizontal="@dimen/dimen_13dp"
            android:layout_marginTop="@dimen/size_15dp"
            android:orientation="horizontal"
            android:weightSum="343">

            <LinearLayout
                android:id="@+id/ll_register_more"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="194"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_register_more"
                    android:layout_width="@dimen/dimen_24dp"
                    android:layout_height="@dimen/dimen_24dp"
                    android:padding="3dp"
                    app:srcCompat="@drawable/ic_radio_button_default" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/dimen_5dp"
                    android:layout_marginLeft="@dimen/dimen_5dp"
                    android:fontFamily="@font/sf_uitext_regular"
                    android:text="@string/button_register_more_used_internet_television"
                    android:textColor="@color/blackSolid"
                    android:textSize="@dimen/text_size_14sp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@color/color_line_gray" />
</LinearLayout>