<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_36dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:background="@drawable/bg_edittext_circle"
        android:layout_marginHorizontal="@dimen/dimen_15dp">
        <ImageView
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:padding="@dimen/dimen_5dp"
            android:src="@drawable/ic_contact_search_new"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dimen_10dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/search_sim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:inputType="number|phone"
            android:padding="@dimen/dimen_8dp"
            android:textSize="@dimen/dimen_14dp"
            android:fontFamily="@font/roboto_medium"
            android:background="@android:color/transparent"
            android:textColor="@color/color_gray_opacity_60"/>
        <ImageView
            android:id="@+id/cancel_layout_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginVertical="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_3dp"
            android:src="@drawable/ic_cancel_search"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_10dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/layout_tra_truoc_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/select_number_pre_checkbox"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp"
                android:padding="@dimen/dimen_6dp"
                app:srcCompat="@drawable/ic_radio_button_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_tra_truoc"
                android:textColor="@color/blackSolid"
                android:textSize="@dimen/text_size_16sp"
                app:fontFamily="@font/sf_pro_regular" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/layout_tra_sau_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginLeft="@dimen/dimen_24dp"
            android:background="@color/white"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/select_number_pos_checkbox"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp"
                android:padding="@dimen/dimen_6dp"
                app:srcCompat="@drawable/ic_radio_button_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_tra_sau"
                android:textColor="@color/blackSolid"
                android:textSize="@dimen/text_size_16sp"
                app:fontFamily="@font/sf_pro_regular" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/select_number_button"
        android:background="@drawable/bg_button_disable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/size_16dp"
        android:text="@string/advanced_filter_"
        android:textColor="@color/whiteSolid"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:nestedScrollingEnabled="true"
            android:paddingTop="@dimen/size_6dp"
            android:paddingBottom="@dimen/size_8dp" />

    </LinearLayout>
</LinearLayout>