<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_16dp"
                android:layout_marginRight="@dimen/size_16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_title_packet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:text="@string/pack_of_data_"
                    android:textColor="@color/color_44494D"
                    android:textSize="@dimen/dimen_18sp"
                    android:fontFamily="@font/pf_beausanspro_bold" />

                <TextView
                    android:id="@+id/selected_subject_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="14dp"
                    android:gravity="center_vertical"
                    android:text="@string/tat_ca"
                    android:textColor="@color/default_color_app"
                    android:textSize="@dimen/text_size_14sp"
                    android:fontFamily="@font/pf_beausanspro_bold"/>

            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/product_package_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_6dp"
                android:layout_marginBottom="@dimen/size_12dp"
                android:nestedScrollingEnabled="false" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_16dp"
                android:layout_marginRight="@dimen/size_16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/goi_vas_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:text="@string/benefit_package_"
                    android:textColor="@color/color_44494D"
                    android:textSize="@dimen/dimen_18sp"
                    android:fontFamily="@font/pf_beausanspro_bold" />

                <TextView
                    android:id="@+id/selected_vas_subject_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="14dp"
                    android:gravity="center_vertical"
                    android:text="@string/tat_ca"
                    android:textColor="@color/default_color_app"
                    android:textSize="@dimen/text_size_14sp"
                    android:fontFamily="@font/pf_beausanspro_bold"/>

            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/vas_package_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_6dp"
                android:layout_marginBottom="@dimen/size_12dp"
                android:nestedScrollingEnabled="false" />

            <LinearLayout
                android:id="@+id/ll_money_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_16dp"
                    android:text="@string/nap_tien"
                    android:textColor="@color/black_v5"
                    android:textSize="@dimen/text_size_18sp"
                    app:fontFamily="@font/pf_beausanspro_bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvInfo"
                        android:layout_width="@dimen/size_100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimen_16dp"
                        android:fontFamily="@font/sf_pro_text_bold"
                        android:textColor="@color/default_color_app"
                        android:textSize="@dimen/dimen_14sp"
                        android:text="0đ" />
                    <SeekBar
                        android:id="@+id/seekbar_vtshop"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginLeft="6dp"
                        android:layout_weight="1"
                        android:maxHeight="7dp"
                        android:progress="0"
                        android:progressDrawable="@drawable/custom_seekbar"
                        android:thumb="@drawable/custom_thumb"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/product_package_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:background="@drawable/bg_button_disable"
        android:enabled="false"
        android:text="Tiếp tục"
        android:textColor="@color/color_727272"
        android:textAllCaps="false"/>

</LinearLayout>